2000-11-15  Derek Price  <derek.price@openavenue.com>

	* filesubr.c (cvs_temp_file): added cvs_temp_file
	function to use mkstemp rather than one of the other temp file
	generators as gcc keeps complaining I should.
	(cvs_temp_name): altered this function to simply wrap cvs_temp_file
	and deprecated it
	* cvs.h: added prototype for cvs_temp_file
	* commit.c (commit): use the new function instead of the old and plug
	an old (though related) memory leak.
	* import.c (import): use the new function
	* login.c (login): Ditto
	* logmsg.c (do_editor, do_verify): Ditto
	* patch.c (patch_fileproc): Ditto

2000-11-14  Larry Jones  <larry.jones@sdrc.com>

	* update.c, update.h (do_update): Add xdotemplate parameter.
	Change all callers.
	(update_dirent_proc): Use dotemplate for Create_Admin, not 1.
	* checkout.c (checkout_proc): Don't create CVS/Template if
	exporting.
	(Reported by Andrey Podkolzin <mdh@zenon.net>.)

2000-11-08  Larry Jones  <larry.jones@sdrc.com>

	* admin.c (admin): Use getgroups() to check for membership in
	CVS_ADMIN_GROUP if it exists.  In any event, check the user's
	primary group in addition to any additional groups.
	(Reported by Thomas Okken <TOkken@refco.com>.)

2000-11-06  Jim Meyering  <meyering@lucent.com>

	Compile with gcc's -Wformat and fix the exposed problems.
	* root.c (parse_cvsroot) [! HAVE_KERBEROS]: Provide an argument
	for the %s error format spec.
	[! HAVE_GSSAPI]: Likewise.
	(normalize_cvsroot): Put comment delimiters around token after `#endif'.

2000-11-03  Larry Jones  <larry.jones@sdrc.com>

	* sanity.sh: Some versions of sed require a space between -e and
	the value.

2000-10-27  Larry Jones  <larry.jones@sdrc.com>

	* checkout.c (checkout): Don't check for a safe location if just
	cat'ing the module database.
	(Reported by Ilya Martynov <m_ilya@agava.com>.)
	Have -s set cat as well as status; it simplifies the code.

2000-10-26  Larry Jones  <larry.jones@sdrc.com>
